fixed menu height on safari

--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -48,6 +48,7 @@
   margin-top: -15px
   padding-top: 15px
   padding-right: 65px
+  line-height: 1rem
   transition: padding-right .5s ease-in-out
   +mq(min-width, $mq-more-medium)
     position: absolute
